--- a/Demeter/src/index.css
+++ b/Demeter/src/index.css
@@ -3,8 +3,181 @@
 @tailwind utilities;
 
 body {
-  background: #e0e0e0;
-  font-family:'Times New Roman', Times, serif;
+  background: #bbbbbb;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 15px;
+  margin: 0%;
+}
+
+h1 {
   font-size: 25px;
-  margin: 2%;
+}
+
+.menu {
+  width: 210px;
+}
+
+.boton-izquierda {
+  margin-top: 220px;
+  margin-right: 340px;
+}
+
+.boton-derecha {
+  margin-top: 220px;
+  margin-left: -100px;
+}
+
+.boton-izquierda-2 {
+  margin-top: 320px;
+  margin-right: 340px;
+}
+
+.boton-derecha-2 {
+  margin-top: 320px;
+  margin-left: -100px;
+}
+
+.deleteText {
+  margin-top: 50px;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: -50px;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); 
+  z-index: 1000; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-container {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  z-index: 1001; 
+  max-width: 90%; 
+  width: 400px; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.modal-container button {
+  margin-top: 100px;
+  margin-right: 10px; 
+  min-width: 100px; 
+}
+
+.toggle-icon {
+  font-size: 24px;
+  margin-right: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.inactive .toggle-icon {
+  transform: translateX(100%); 
+  color: gray;
+}
+
+.estado-icon {
+  font-size: 32px; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 48px; 
+  width: 48px;
+  border-radius: 50%; 
+  transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.estado-icon.active {
+  color: rgba(232, 120, 0, 0.819); 
+}
+
+.estado-icon.inactive {
+  color: gray; 
+}
+
+.barra-container {
+  margin-top: -10px;
+  margin-bottom: -10px;
+  margin-left: 105px;
+}
+
+.adjust {
+  margin-top: -10px;
+  margin-bottom: -10px;
+  margin-left: 27px;
+}
+
+.adjust-two {
+  margin-top: -10px;
+  margin-bottom: -10px;
+}
+
+.width-column {
+  max-width: 100px;
+  overflow: hidden;
+  white-space: nowrap; 
+  overflow-wrap: anywhere; 
+  overflow-x: auto; 
+}
+
+.select-scrollable {
+  max-height: 150px; 
+  overflow-y: auto;
+}
+
+.overlay-container {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  max-height: 150px; 
+  overflow-y: auto; 
+  z-index: 1001; 
+}
+
+.custom-select-container .react-select__menu {
+  max-height: 150px; 
+}
+
+.down {
+  margin-top: -10px;
+}
+
+.inferior {
+  margin-bottom: -70px;
+}
+
+.user-card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.user-card:hover {
+  background-color: #e0e0e0;
+}
+
+strong {
+  color: red;
+}
+
+.columnas {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* Esto creará 2 columnas igualmente espaciadas */
+  gap: 5px; /* Espacio entre los elementos */
 }
